--- a/ica4/style-resources.css
+++ b/ica4/style-resources.css
@@ -11,15 +11,49 @@ html {
 }
 
 /* Selectors to be matched up with rulesets */
+.card footer, .card header{
+  padding: 1em;
+  height: 3em;
+  
+}
 
-.card article img
-.card footer
-.card header
-.card
+article{
+  height: 12em;
+  background-color: rgba(0,0,0,0.2);
+}
 
-/* Rulesets to be matched up with selectors */
+p, h2{
+  margin: 0;
+}
 
+h2{
+  font-size: 2em;
+  line-height: 1.5em;
+}
 
+footer p{
+  font-size: 1.5em;
+  line-height: 1.5em;
+}
+
+article p{
+  padding: 1em;
+  color: white;
+}
+
+.card article img{
+  max-height: 100%;
+  float: right;
+}
+
+.card footer{
+  background-image: linear-gradient(to bottom,rgba(0,0,0,0), rgba(0,0,0,0.1));
+  border-radius: 0 0 1.5em 1.5em;
+}
+.card header{
+  background-image: linear-gradient(to bottom,rgba(0,0,0,0.1), rgba(0,0,0,0));
+  border-radius: 1.5em 1.5em 0 0;
+}
 .card{
   width: 35em;
   height: 22em;
@@ -29,24 +63,22 @@ html {
   border-radius: 1.5em;
 }
 
-.card header{
-  background-image: linear-gradient(to bottom,rgba(0,0,0,0.1), rgba(0,0,0,0));
-  border-radius: 1.5em 1.5em 0 0;
-}
 
-.card footer{
-  background-image: linear-gradient(to bottom,rgba(0,0,0,0), rgba(0,0,0,0.1));
-  border-radius: 0 0 1.5em 1.5em;
-}
-
-.card footer, .card header{
-  padding: .625em;
-  
-}
+/* Rulesets to be matched up with selectors */
 
 
-.card article img {
-  max-height: 100%;
-  float: right;
-}
 
+
+/*.card header
+
+.card footer
+
+
+.card
+
+
+
+
+
+.card article img 
+*/
