--- a/styleSheets/style.css
+++ b/styleSheets/style.css
@@ -7,6 +7,7 @@ body{
 
 img{
     max-width: 100%;
+    max-height: 100%;
 }
 
 h1{
@@ -52,30 +53,65 @@ a:hover{
     text-decoration: underline;
 }
 
-a:visited{
-    color:#AD8843;
-    text-decoration: none;
+h1 a{
+    color: #FCF8F0;
 }
 
 hr{
     border: 2px solid #3C3A3A;
 }
 
-#content{
+.content{
     display: grid;
     grid-template-columns: 1fr 2fr;
     gap: 5em;
-    padding: 2em 2em;
+    padding: 5em 17%;
+    overflow: scroll;
+}
+#projects > .content{
+    height: 20em;
+    grid-template-columns: 1fr 3fr;
+}
+
+.thumbnail{
+    justify-content: center;
+}
+
+.thumbnail > img{
+    max-height: 18em;
+    width: 12em;
+}
+
+#contact > .content{
+    grid-template-columns: 1fr 1fr;
+}
+
+.projectPost > .content{
+    display: block;
+    
+}
+
+.projectPic{
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    max-width: 700px;
+}
+
+@media screen and (max-width: 1000px){
+    .content{
+        padding: 5em 5em;
+    }
 }
 
 @media screen and (max-width: 630px){
-    #content{
-        display: flex;
-        flex-direction: column;
+    .content{
+        display: block;
+        padding: 2em 2em;
     }
 
     #name1{
         display: none;
     }
-
 }
